[package]
name = "hydro-analysis"
version = "0.1.3"
edition = "2024"
authors = ["Matt Wilkins (https://github.com/mrmattwilkins)"]
license = "MIT"
description = "Hydrolog anaylsis tools for manipulating DEMs"
readme = "README.md"
repository = "https://github.com/mrmattwilkins/hydro-analysis"
homepage = "https://github.com/mrmattwilkins/hydro-analysis"
documentation = "https://docs.rs/hydro-analysis"
keywords = ["hydrology", "DEM"]
categories = ["science::geo"]

[profile.release]
opt-level = 3

[dependencies]
rayon = "1.10"
ndarray = { version = "0.16.1", features = ["rayon"] }
anyhow = "1.0.1"
tempfile = "3.25.0"
thiserror = "2.0.0"
tiff = "0.9"
bytemuck = "1.22.0"
num = "0.4"
